@@ -1,5 +1,7 @@
 #
-# This test file concludes tests which point out known bugs.
+# IMPORTANT: Always keep the first 7 lines (comments),
+# even if this file is otherwise empty.
+#
+# This test file includes tests which point out known bugs.
 # So all tests will cause failure.
 #
-
